# search_blame

./: Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: search.md  search_and_blame.md
src/: bin.rs  cli.rs  git.rs  lib.rs  main.rs  search.rs  ui.rs
tests/: git.rs
