[package]
name = "search_blame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grep = "0.2"
git2 = "0.14"
clap = { version = "3.2.12", features = ["derive"] }
walkdir = "2.3.2"
console = "0.15.0"
indicatif = "0.16.2"