[package]
name = "search_blame"
version = "0.1.0"
edition = "2021"
authors = ["Calvin Mwadime <mwadimemakokha@gmail.com>"]
description = "A cli tool that provides search results in a git repo using the author as a search key"
license = "MIT"
repository = "https://github.com/CalvoM/search_blame"
keywords = ["cli", "search", "blame", "author"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grep = "0.2"
git2 = "0.14"
clap = { version = "3.2.12", features = ["derive"] }
walkdir = "2.3.2"
console = "0.15.0"
indicatif = "0.16.2"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
assert_fs = "1.0.7"
rstest = "0.15.0"

[lib]
name = "search_blame"
path = "src/lib.rs"

[[bin]]
name = "search_blame"
path = "src/bin.rs"
